--- a/01.start-cpu-cluster.ipynb
+++ b/01.start-cpu-cluster.ipynb
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg')"
+       "Workspace.create(name='eus-azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-rg')"
       ]
      },
      "execution_count": 2,
@@ -96,8 +96,8 @@
       "\n",
       "Name: dask\n",
       "\n",
-      "vNET RG: cody-eastus-rg\n",
-      "vNET name: wifi\n",
+      "vNET RG: cody-rg\n",
+      "vNET name: wifi-eastus\n",
       "vNET subnet name: default\n",
       "\n",
       "Compute target: dask-ct\n",
@@ -108,12 +108,12 @@
    ],
    "source": [
     "### name\n",
-    "name        = 'dask'             # REPLACE\n",
+    "name        = 'dask'                                    # REPLACE\n",
     "\n",
     "### vnet settings\n",
-    "vnet_rg     = ws.resource_group  # replace if needed\n",
-    "vnet_name   = 'wifi'             # replace if needed\n",
-    "subnet_name = 'default'          # replace if needed\n",
+    "vnet_rg     = ws.resource_group                         # replace if needed\n",
+    "vnet_name   = f'wifi-{ws.get_details()[\"location\"]}'    # replace if needed\n",
+    "subnet_name = 'default'                                 # replace if needed\n",
     "\n",
     "### azure ml names \n",
     "ct_name     = f'{name}-ct'\n",
@@ -149,9 +149,19 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating\n",
+      "Succeeded\n",
+      "AmlCompute wait for completion finished\n",
+      "Minimum number of nodes requested have been provisioned\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "AmlCompute(workspace=Workspace.create(name='azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-eastus-rg'), name=dask-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-eastus-rg/providers/Microsoft.MachineLearningServices/workspaces/azureml/computes/dask-ct, type=AmlCompute, provisioning_state=Succeeded, location=eastus, tags=None)"
+       "AmlCompute(workspace=Workspace.create(name='eus-azureml', subscription_id='6560575d-fa06-4e7d-95fb-f962e74efd7a', resource_group='cody-rg'), name=dask-ct, id=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourceGroups/cody-rg/providers/Microsoft.MachineLearningServices/workspaces/eus-azureml/computes/dask-ct, type=AmlCompute, provisioning_state=Succeeded, location=eastus, tags=None)"
       ]
      },
      "execution_count": 4,
@@ -218,7 +228,40 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 236 ms, sys: 63.7 ms, total: 300 ms\n",
+      "Wall time: 12.5 s\n",
+      "CPU times: user 82.3 ms, sys: 13.8 ms, total: 96 ms\n",
+      "Wall time: 9.66 s\n",
+      "CPU times: user 77 ms, sys: 10.5 ms, total: 87.5 ms\n",
+      "Wall time: 9.6 s\n",
+      "CPU times: user 87.9 ms, sys: 14.6 ms, total: 103 ms\n",
+      "Wall time: 9.85 s\n",
+      "CPU times: user 71.7 ms, sys: 0 ns, total: 71.7 ms\n",
+      "Wall time: 9.65 s\n",
+      "CPU times: user 81.8 ms, sys: 2.58 ms, total: 84.4 ms\n",
+      "Wall time: 9.93 s\n",
+      "CPU times: user 73.1 ms, sys: 14.2 ms, total: 87.3 ms\n",
+      "Wall time: 10.3 s\n",
+      "CPU times: user 84.1 ms, sys: 754 µs, total: 84.8 ms\n",
+      "Wall time: 11.8 s\n",
+      "CPU times: user 95.7 ms, sys: 554 µs, total: 96.2 ms\n",
+      "Wall time: 6.58 s\n",
+      "CPU times: user 70.5 ms, sys: 5.5 ms, total: 76 ms\n",
+      "Wall time: 7.89 s\n",
+      "CPU times: user 78.4 ms, sys: 8.39 ms, total: 86.8 ms\n",
+      "Wall time: 8.19 s\n",
+      "CPU times: user 87.8 ms, sys: 9.73 ms, total: 97.5 ms\n",
+      "Wall time: 9.75 s\n",
+      "CPU times: user 95.5 ms, sys: 0 ns, total: 95.5 ms\n",
+      "Wall time: 3.3 s\n"
+     ]
+    }
+   ],
    "source": [
     "dsetdata = 'noaa-isd-files'\n",
     "data_url = 'https://azureopendatastorage.blob.core.windows.net/isdweatherdatacontainer/ISDWeather'\n",
@@ -227,8 +270,10 @@
     "    os.system('sudo chmod 777 /mnt')\n",
     "    for year in range(2008, 2020+1):\n",
     "        ds = Dataset.File.from_files(f'{data_url}/year={year}/month=*/*.parquet', validate=False)\n",
+    "        print('Downloading...')\n",
     "        %time ds.download(f'/mnt/data/isd/year={year}', overwrite=True)\n",
-    "    ws.get_default_datastore().upload('/mnt/data/isd', '/noaa-isd', show_progress=False)\n",
+    "    print('Uploading...')\n",
+    "    %time ws.get_default_datastore().upload('/mnt/data/isd', '/noaa-isd', show_progress=False)\n",
     "    ds = Dataset.File.from_files((ws.get_default_datastore(), '/noaa-isd/**/*.parquet'))\n",
     "    ds = ds.register(ws, dsetdata)"
    ]
@@ -267,7 +312,7 @@
     "            'notebook',\n",
     "            'adlfs', \n",
     "            'fsspec', \n",
-    "            'azureml-sdk[notebooks]',\n",
+    "            'azureml-sdk',\n",
     "            'lz4']\n",
     "\n",
     "env = Environment(name=env_name)\n",
@@ -295,10 +340,10 @@
       "############################## Setting up cluster ##############################\n",
       "########################## Submitting the experiment ###########################\n",
       "####################### Waiting for scheduler node's IP ########################\n",
-      ".................................\n",
+      ".................................................................................................................................................................................................................................................................\n",
       "\n",
       "\n",
-      "########################## Scheduler: 10.12.0.15:8786 ##########################\n",
+      "########################### Scheduler: 10.2.0.5:8786 ###########################\n",
       "############################### On the same VNET ###############################\n",
       "########################### Connections established ############################\n",
       "############################ Scaling to 10 workers #############################\n",
@@ -324,11 +369,11 @@
     {
      "data": {
       "text/html": [
-       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1582050728_558cb8d5</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1582050728_558cb8d5?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-eastus-rg/workspaces/azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
+       "<table style=\"width:100%\"><tr><th>Experiment</th><th>Id</th><th>Type</th><th>Status</th><th>Details Page</th><th>Docs Page</th></tr><tr><td>dask-cloudprovider</td><td>dask-cloudprovider_1582513353_456b702c</td><td>azureml.scriptrun</td><td>Running</td><td><a href=\"https://ml.azure.com/experiments/dask-cloudprovider/runs/dask-cloudprovider_1582513353_456b702c?wsid=/subscriptions/6560575d-fa06-4e7d-95fb-f962e74efd7a/resourcegroups/cody-rg/workspaces/eus-azureml\" target=\"_blank\" rel=\"noopener\">Link to Azure Machine Learning studio</a></td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.script_run.ScriptRun?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Link to Documentation</a></td></tr></table>"
       ],
       "text/plain": [
        "Run(Experiment: dask-cloudprovider,\n",
-       "Id: dask-cloudprovider_1582050728_558cb8d5,\n",
+       "Id: dask-cloudprovider_1582513353_456b702c,\n",
        "Type: azureml.scriptrun,\n",
        "Status: Running)"
       ]
@@ -359,7 +404,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f20c3221490245c3aac20a8609670529",
+       "model_id": "cacc2f9512234706809f3e691062bdaa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,16 +476,6 @@
       " |  \n",
       " |      Defaults to ``1``.\n",
       " |  \n",
-      " |  use_gpu: bool (optional)\n",
-      " |      Flag indicating whether to setup cluster for using GPUs.\n",
-      " |  \n",
-      " |      Defaults to ``False``.\n",
-      " |  \n",
-      " |  n_gpus_per_node: int (optional)\n",
-      " |      Number of GPUs per node in the Azure ML Compute Target.\n",
-      " |  \n",
-      " |      Defaults to ``0``.\n",
-      " |  \n",
       " |  jupyter: bool (optional)\n",
       " |      Flag to start JupyterLab session on the headnode of the cluster.\n",
       " |  \n",
@@ -489,7 +524,7 @@
       " |      see https://aka.ms/azureml/data and https://aka.ms/azureml/datastores.\n",
       " |  \n",
       " |      Defaults to ``[]``. To mount all datastores in the workspace,\n",
-      " |      set to ``list(workspace.datastores)``.\n",
+      " |      set to ``[ws.datastores[datastore] for datastore in ws.datastores]``.\n",
       " |  \n",
       " |  asynchronous: bool (optional)\n",
       " |      Flag to run jobs asynchronously.\n",
@@ -540,7 +575,7 @@
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  __init__(self, workspace, compute_target, environment_definition, experiment_name=None, initial_node_count=None, use_gpu=None, n_gpus_per_node=None, jupyter=None, jupyter_port=None, dashboard_port=None, scheduler_port=None, additional_ports=None, admin_username=None, admin_ssh_key=None, datastores=None, code_store=None, asynchronous=False, **kwargs)\n",
+      " |  __init__(self, workspace, compute_target, environment_definition, experiment_name=None, initial_node_count=None, jupyter=None, jupyter_port=None, dashboard_port=None, scheduler_port=None, additional_ports=None, admin_username=None, admin_ssh_key=None, datastores=None, code_store=None, asynchronous=False, **kwargs)\n",
       " |      Initialize self.  See help(type(self)) for accurate signature.\n",
       " |  \n",
       " |  close(self)\n",
