--- a/01.start-cpu-cluster.ipynb
+++ b/01.start-cpu-cluster.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "### vnet settings\n",
     "vnet_rg     = ws.resource_group  # replace if needed\n",
-    "vnet_name   = f'wifi'            # replace if needed\n",
+    "vnet_name   = 'wifi'             # replace if needed\n",
     "subnet_name = '5GHz'             # replace if needed\n",
     "\n",
     "### azure ml names \n",
