add lightgbm trainnig

--- a/02.cpu-cluster-demo.ipynb
+++ b/02.cpu-cluster-demo.ipynb
@@ -2215,8 +2215,138 @@
    ],
    "source": [
     "rmse = (((y.to_dask_array().compute()-y_pred)**2).mean())**.5 # runs locally, distribute (?)\n",
-    "run.log('RMSE', rmse)\n",
+    "run.log('RMSE_XGBoost', rmse)\n",
     "print(f'Training RMSE: {round(rmse, 3)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train LightGBM Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask_lightgbm import LGBMRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING - Parameter tree_learner not set or set to incorrect value (None), using \"data\" as default\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 431 ms, sys: 30.1 ms, total: 461 ms\n",
+      "Wall time: 1min 21s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LGBMRegressor(boosting_type='gbdt', class_weight=None, colsample_bytree=1.0,\n",
+       "              importance_type='split', learning_rate=0.1,\n",
+       "              local_listen_port=12400,\n",
+       "              machines='10.0.0.23:12400,10.0.0.29:12401,10.0.0.28:12402,10.0.0.27:12403,10.0.0.14:12404,10.0.0.10:12405,10.0.0.25:12406,10.0.0.15:12407,10.0.0.8:12408,10.0.0.26:12409,10.0.0.18:12410,10.0.0.11:12411,10.0.0.20...7:12422,10.0.0.12:12423,10.0.0.17:12424',\n",
+       "              max_depth=-1, min_child_samples=20, min_child_weight=0.001,\n",
+       "              min_split_gain=0.0, n_estimators=16, n_jobs=-1, num_leaves=31,\n",
+       "              num_machines=25, num_threads=8, objective=None, random_state=None,\n",
+       "              reg_alpha=0.0, reg_lambda=0.0, silent=True, subsample=1.0,\n",
+       "              subsample_for_bin=200000, subsample_freq=0, time_out=120,\n",
+       "              tree_learner='data')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lgbm = LGBMRegressor(n_estimators=16)\n",
+    "%time lgbm.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 12.2 s, sys: 7.95 s, total: 20.2 s\n",
+      "Wall time: 41.3 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time y_pred = lgbm.predict(X).compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training RMSE: 18.321\n"
+     ]
+    }
+   ],
+   "source": [
+    "rmse2 = (((y.to_dask_array().compute()-y_pred)**2).mean())**.5 # runs locally, distribute (?)\n",
+    "run.log('RMSE_LightGBM', rmse2)\n",
+    "print(f'Training RMSE: {round(rmse2, 3)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'xgb'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if rmse2 < rmse:\n",
+    "    best_model = 'lgbm'\n",
+    "else:\n",
+    "    best_model = 'xgb'\n",
+    "\n",
+    "best_model"
    ]
   },
   {
@@ -2228,34 +2358,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = 'xgboost_noaa_isd.joblib.dat'\n",
-    "joblib.dump(xgb, model_path)\n",
-    "xgb = joblib.load(model_path)"
+    "model_path = f'{best_model}_noaa_isd.joblib.dat'\n",
+    "joblib.dump(xgb, model_path) if best_model is 'xgb' else joblib.dump(lgbm, model_path)\n",
+    "model2 = joblib.load(model_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Registering model xgboost-noaa-isd\n"
+      "Registering model xgb-noaa-isd\n"
      ]
     }
    ],
    "source": [
     "model = Model.register(run.experiment.workspace, \n",
-    "                       model_name      = 'xgboost-noaa-isd', \n",
+    "                       model_name      = f'{best_model}-noaa-isd', \n",
     "                       model_path      = model_path,\n",
-    "                       description     = 'Dask XGBoost NOAA ISD temperature predictor',\n",
-    "                       model_framework = 'DaskML.XGBoostRegressor')"
+    "                       description     = f'NOAA ISD temperature predictor')"
    ]
   }
  ],
